1998-03-14  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtk/gtktoolbar.c (gtk_toolbar_insert_element): Moved the
	gtk_signal_connect of the specified callback into the big switch()
	for buttons.  We don't want to connect to the "clicked" signal of
	a custom widget or a space element, because it may not have one.
	(gtk_toolbar_insert_element): Extra sanity check; if the type is
	GTK_TOOLBAR_CHILD_WIDGET, then the specified widget must not be NULL.

Sat Mar 14 02:54:28 PST 1998 Manish Singh <yosh@gimp.org>

        * gtk.m4: fixed a bashism in gtk tests

Sat Mar 14 08:29:56 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkhandlebox.c (gtk_handle_box_size_allocate): refuse to allocate
	with a greater height than requested.
	(gtk_handle_box_remove): clean up if the child is detached.

	* gtk/gtktoolbar.c (gtk_toolbar_size_allocate): don't take invisible
	children into account.

Sat Mar 14 02:12:44 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkmain.c gdk/gdk.c: Don't leave NULL's in argv.

Sat Mar 14 01:36:51 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk-config.in: Added -I $exec_prefix/glib/include to cflags

Sat Mar 14 00:03:34 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkwindow.c:
          Don't resize windows when request is rejected by WM.
	  Only use the resize count to guess whether a Configure
	  event was a rejection by the WM, or a move.

	* gdk/gdk.c gdk/gdktypes.h: 
	  - Don't XDestroyWindow foreign windows (If they're a child of
	  one of our windows, reparent them to root and send them a WM 
	  delete event, otherwise, just delete the GTK structure.) 
	  Handle notification of their deletion properly.
          (Made foreign windows a seperate window type to do this)
	
	* gtk/gtkobject.c (gtk_object_set_data_full): 
	  Call the DestroyNotify when replacing the object data.

Sat Mar 14 02:03:13 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtksignal.c: make use of *_by_id() functions for handler key.
