@@ -50,9 +50,9 @@ struct _GtkHandleBox
   GdkWindow      *steady_window; /* the window that stays in the parent container */
   GtkWidget      *float_window;
   GtkRequisition  real_requisition;
-  gint		  is_being_dragged : 1;
-  gint		  is_onroot : 1;
-  gint		  overlap_attaches : 1;
+  guint		  is_being_dragged : 1;
+  guint		  is_onroot : 1;
+  guint		  overlap_attaches : 1;
   GdkCursor      *fleur_cursor;
 
   gint dragoff_x, dragoff_y; /* start drag position (wrt widget->window) */
